@startuml
class ProjectController {
    + ProjectController(context:DBContext)
    + Exists(id:string) : bool
    + <<async>> Create(template:Project) : Task<ActionResult<string>>
    + <<async>> Get(id:string) : Task<ActionResult<string>>
    + <<async>> Update(id:string, template:Project) : Task<ActionResult<string>>
    + <<async>> UpdateAndFetchAll(id:string, template:Project) : Task<ActionResult<string>>
    + <<async>> Delete(id:string) : Task<ActionResult<string>>
    + <<async>> Delete(template:Project) : Task<ActionResult<string>>
    + <<async>> All() : Task<ActionResult<string>>
    + Settings() : string
}
class "IUserInterfaceCRUD`1"<T> {
}
ControllerBase <|-- ProjectController
"IUserInterfaceCRUD`1" "<Project>" <|-- ProjectController
ProjectController --> "projectControl" ProjectControl
ProjectController o-> "settings" JsonSerializerSettings
@enduml
